--- a/ethercat_trigger_controllers/CMakeLists.txt
+++ b/ethercat_trigger_controllers/CMakeLists.txt
@@ -2,9 +2,9 @@ cmake_minimum_required(VERSION 2.4.6)
 include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
 set(ROS_BUILD_TYPE RelWithDebInfo)
 #set(ROS_BUILD_TYPE Release)
-rospack(robot_mechanism_controllers)
-genmsg()
-gensrv()
+rosbuild_init()
+rosbuild_genmsg()
+rosbuild_gensrv()
 set(_srcs
     src/trigger_controller.cpp
     src/multi_trigger_controller.cpp
