--- a/control_toolbox/CMakeLists.txt
+++ b/control_toolbox/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 2.4.6)
 include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
 include_directories(include/control_toolbox/eigen2)
 rosbuild_init()
-rosbuild_genmsg()
+#rosbuild_genmsg()
 rosbuild_gensrv()
 rosbuild_add_library(control_toolbox
  src/pid.cpp
