--- a/pr2_controllers_msgs/CMakeLists.txt
+++ b/pr2_controllers_msgs/CMakeLists.txt
@@ -9,6 +9,11 @@ include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
 #  MinSizeRel     : w/o debug symbols, w/ optimization, stripped binaries
 #set(ROS_BUILD_TYPE RelWithDebInfo)
 
+# Generate Actions
+rosbuild_find_ros_package(actionlib)
+include(${actionlib_PACKAGE_PATH}/cmake/actionbuild.cmake)
+genaction()
+
 rosbuild_init()
 
 #set the default path for built executables to the "bin" directory
