Added auto-generated action messages to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,32 @@ trajectory_msgs/msg/java
 trajectory_msgs/msg/lisp
 trajectory_msgs/msg/oct
 trajectory_msgs/src
+
+pr2_controllers_msgs/msg/JointTrajectoryAction.msg
+pr2_controllers_msgs/msg/JointTrajectoryActionFeedback.msg
+pr2_controllers_msgs/msg/JointTrajectoryActionGoal.msg
+pr2_controllers_msgs/msg/JointTrajectoryActionResult.msg
+pr2_controllers_msgs/msg/JointTrajectoryFeedback.msg
+pr2_controllers_msgs/msg/JointTrajectoryGoal.msg
+pr2_controllers_msgs/msg/JointTrajectoryResult.msg
+pr2_controllers_msgs/msg/PointHeadAction.msg
+pr2_controllers_msgs/msg/PointHeadActionFeedback.msg
+pr2_controllers_msgs/msg/PointHeadActionGoal.msg
+pr2_controllers_msgs/msg/PointHeadActionResult.msg
+pr2_controllers_msgs/msg/PointHeadFeedback.msg
+pr2_controllers_msgs/msg/PointHeadGoal.msg
+pr2_controllers_msgs/msg/PointHeadResult.msg
+pr2_controllers_msgs/msg/Pr2GripperCommandAction.msg
+pr2_controllers_msgs/msg/Pr2GripperCommandActionFeedback.msg
+pr2_controllers_msgs/msg/Pr2GripperCommandActionGoal.msg
+pr2_controllers_msgs/msg/Pr2GripperCommandActionResult.msg
+pr2_controllers_msgs/msg/Pr2GripperCommandFeedback.msg
+pr2_controllers_msgs/msg/Pr2GripperCommandGoal.msg
+pr2_controllers_msgs/msg/Pr2GripperCommandResult.msg
+pr2_controllers_msgs/msg/SingleJointPositionAction.msg
+pr2_controllers_msgs/msg/SingleJointPositionActionFeedback.msg
+pr2_controllers_msgs/msg/SingleJointPositionActionGoal.msg
+pr2_controllers_msgs/msg/SingleJointPositionActionResult.msg
+pr2_controllers_msgs/msg/SingleJointPositionFeedback.msg
+pr2_controllers_msgs/msg/SingleJointPositionGoal.msg
+pr2_controllers_msgs/msg/SingleJointPositionResult.msg
