--- a/robot_mechanism_controllers/CMakeLists.txt
+++ b/robot_mechanism_controllers/CMakeLists.txt
@@ -19,6 +19,7 @@ rosbuild_add_library(robot_mechanism_controllers
     src/joint_position_controller.cpp
     src/joint_velocity_controller.cpp
     src/joint_spline_trajectory_controller.cpp
+    src/joint_trajectory_action_controller.cpp
 )
 
 
