--- a/pr2_mechanism_controllers/CMakeLists.txt
+++ b/pr2_mechanism_controllers/CMakeLists.txt
@@ -16,6 +16,7 @@ rosbuild_add_library( pr2_mechanism_controllers
   src/base_kinematics.cpp
   src/pr2_odometry.cpp
   src/pr2_base_controller.cpp
+  src/pr2_base_controller2.cpp
   src/pr2_gripper_controller.cpp
   src/trajectory.cpp
   )
