pr2_head_action now implements the pointing frame and pointing axis part of the API

--- a/pr2_head_action/CMakeLists.txt
+++ b/pr2_head_action/CMakeLists.txt
@@ -19,4 +19,5 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 #rosbuild_genmsg()
 #rosbuild_gensrv()
 
-rosbuild_add_executable(pr2_head_action src/pr2_head_action.cpp)
+#rosbuild_add_executable(pr2_head_action src/pr2_head_action.cpp)
+rosbuild_add_executable(pr2_head_action src/pr2_point_frame.cpp)
