Added a proxy that limits accelerations to prevent overshoot.  Using it in the joint trajectory action controller.

--- a/control_toolbox/CMakeLists.txt
+++ b/control_toolbox/CMakeLists.txt
@@ -10,6 +10,7 @@ rosbuild_add_library(control_toolbox
  src/sine_sweep.cpp
  src/dither.cpp
  src/sinusoid.cpp
+ src/limited_proxy.cpp
  )
  
 # rosbuild_add_executable(test_linear test/linear.cpp)
