--- a/pr2_controllers_msgs/CMakeLists.txt
+++ b/pr2_controllers_msgs/CMakeLists.txt
@@ -1,25 +1,32 @@
-cmake_minimum_required(VERSION 2.4.6)
-include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
+# http://ros.org/doc/groovy/api/catkin/html/user_guide/supposed.html
+cmake_minimum_required(VERSION 2.8.3)
+project(pr2_controllers_msgs)
 
-# Set the build type.  Options are:
-#  Coverage       : w/ debug symbols, w/o optimization, w/ code-coverage
-#  Debug          : w/ debug symbols, w/o optimization
-#  Release        : w/o debug symbols, w/ optimization
-#  RelWithDebInfo : w/ debug symbols, w/ optimization
-#  MinSizeRel     : w/o debug symbols, w/ optimization, stripped binaries
-#set(ROS_BUILD_TYPE RelWithDebInfo)
+# Load catkin and all dependencies required for this package
+find_package(catkin REQUIRED COMPONENTS actionlib_msgs trajectory_msgs geometry_msgs message_generation)
 
-# Generate Actions
-rosbuild_find_ros_package(actionlib_msgs)
-include(${actionlib_msgs_PACKAGE_PATH}/cmake/actionbuild.cmake)
-genaction()
+add_message_files(
+   DIRECTORY msg
+   FILES
+   JointControllerState.msg
+   JointTrajectoryControllerState.msg
+   Pr2GripperCommand.msg
+)
+add_service_files(
+   DIRECTORY srv
+   FILES QueryCalibrationState.srv QueryTrajectoryState.srv
+)
+add_action_files(
+   DIRECTORY action
+   FILES
+   JointTrajectory.action
+   PointHead.action
+   Pr2GripperCommand.action
+   SingleJointPosition.action
+)
+## Generate added messages and services with any dependencies listed here
+generate_messages( DEPENDENCIES trajectory_msgs std_msgs)
 
-rosbuild_init()
-
-#set the default path for built executables to the "bin" directory
-set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
-#set the default path for built libraries to the "lib" directory
-set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
-
-rosbuild_genmsg()
-rosbuild_gensrv()
+catkin_package(
+    CATKIN_DEPENDS actionlib_msgs trajectory_msgs geometry_msgs message_runtime
+)
