--- a/single_joint_position_action/CMakeLists.txt
+++ b/single_joint_position_action/CMakeLists.txt
@@ -1,24 +1,14 @@
-cmake_minimum_required(VERSION 2.4.6)
-include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
+# http://ros.org/doc/groovy/api/catkin/html/user_guide/supposed.html
+cmake_minimum_required(VERSION 2.8.3)
+project(single_joint_position_action)
 
-# Set the build type.  Options are:
-#  Coverage       : w/ debug symbols, w/o optimization, w/ code-coverage
-#  Debug          : w/ debug symbols, w/o optimization
-#  Release        : w/o debug symbols, w/ optimization
-#  RelWithDebInfo : w/ debug symbols, w/ optimization
-#  MinSizeRel     : w/o debug symbols, w/ optimization, stripped binaries
-#set(ROS_BUILD_TYPE RelWithDebInfo)
+# Load catkin and all dependencies required for this package
+find_package(catkin REQUIRED COMPONENTS roscpp pr2_controllers_msgs actionlib)
 
-rosbuild_init()
+find_package(Boost REQUIRED COMPONENTS thread)
+include_directories(${Boost_INCLUDE_DIRS})
 
-#set the default path for built executables to the "bin" directory
-set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
-#set the default path for built libraries to the "lib" directory
-set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
+catkin_package()
 
-#rosbuild_genmsg()
-#rosbuild_gensrv()
-
-rosbuild_add_boost_directories()
-rosbuild_add_executable(single_joint_position_action src/single_joint_position_action.cpp)
-rosbuild_link_boost(single_joint_position_action thread)
+add_executable(single_joint_position_action src/single_joint_position_action.cpp)
+target_link_libraries(single_joint_position_action ${Boost_LIBRARIES})
