--- a/pr2_head_action/CMakeLists.txt
+++ b/pr2_head_action/CMakeLists.txt
@@ -1,26 +1,22 @@
-cmake_minimum_required(VERSION 2.4.6)
-include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
+# http://ros.org/doc/groovy/api/catkin/html/user_guide/supposed.html
+cmake_minimum_required(VERSION 2.8.3)
+project(pr2_head_action)
 
-# Set the build type.  Options are:
-#  Coverage       : w/ debug symbols, w/o optimization, w/ code-coverage
-#  Debug          : w/ debug symbols, w/o optimization
-#  Release        : w/o debug symbols, w/ optimization
-#  RelWithDebInfo : w/ debug symbols, w/ optimization
-#  MinSizeRel     : w/o debug symbols, w/ optimization, stripped binaries
-#set(ROS_BUILD_TYPE RelWithDebInfo)
-
-rosbuild_init()
+# Load catkin and all dependencies required for this package
+find_package(catkin REQUIRED COMPONENTS geometry_msgs trajectory_msgs sensor_msgs pr2_controllers_msgs roscpp message_filters tf tf_conversions actionlib kdl_parser)
+find_package(orocos_kdl REQUIRED)
 
 find_package(Eigen REQUIRED)
-include_directories(SYSTEM ${Eigen_INCLUDE_DIRS})
 
-#set the default path for built executables to the "bin" directory
-set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
-#set the default path for built libraries to the "lib" directory
-set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
+#add_executable(pr2_head_action src/pr2_head_action.cpp)
 
+find_package(Boost REQUIRED COMPONENTS thread)
+include_directories(${Boost_INCLUDE_DIRS} ${Eigen_INCLUDE_DIRS}
+   ${orocos_kdl_INCLUDE_DIRS})
 
-#rosbuild_add_executable(pr2_head_action src/pr2_head_action.cpp)
-rosbuild_add_boost_directories()
-rosbuild_add_executable(pr2_head_action src/pr2_point_frame.cpp)
-rosbuild_link_boost(pr2_head_action thread)
+catkin_package()
+
+add_executable(pr2_head_action src/pr2_point_frame.cpp)
+target_link_libraries(pr2_head_action ${Boost_LIBRARIES} 
+   ${orocos_kdl_LIBRARIES})
+
