--- a/pr2_mechanism_controllers/CMakeLists.txt
+++ b/pr2_mechanism_controllers/CMakeLists.txt
@@ -1,21 +1,49 @@
-cmake_minimum_required(VERSION 2.4.6)
+# http://ros.org/doc/groovy/api/catkin/html/user_guide/supposed.html
+cmake_minimum_required(VERSION 2.8.3)
+project(pr2_mechanism_controllers)
+
+# Load catkin and all dependencies required for this package
+find_package(catkin REQUIRED COMPONENTS std_msgs geometry_msgs pr2_mechanism_msgs nav_msgs pr2_msgs visualization_msgs diagnostic_msgs pr2_controller_interface roscpp pr2_controllers_msgs pr2_mechanism_model realtime_tools robot_mechanism_controllers  pluginlib rosconsole tf angles control_toolbox filters diagnostic_updater message_generation)
+
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
-include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
-#set(ROS_BUILD_TYPE RelWithDebInfo)
-set(ROS_BUILD_TYPE Release)
-rosbuild_init()
-rosbuild_genmsg()
-rosbuild_gensrv()
+add_message_files(
+   DIRECTORY msg
+   FILES
+   BaseControllerState2.msg
+   BaseControllerState.msg
+   BaseOdometryState.msg
+   DebugInfo.msg
+   Odometer.msg
+   OdometryMatrix.msg
+   TrackLinkCmd.msg
+)
+
+add_service_files(
+   DIRECTORY srv
+   FILES
+   SetProfile.srv
+)
 
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
-
-rosbuild_add_boost_directories()
 
 find_package(Eigen REQUIRED)
 include_directories(${EIGEN_INCLUDE_DIRS})
 
-rosbuild_add_library( pr2_mechanism_controllers
+find_package(Boost REQUIRED COMPONENTS thread)
+include_directories(${Boost_INCLUDE_DIRS})
+
+## Generate added messages and services with any dependencies listed here
+generate_messages( DEPENDENCIES geometry_msgs std_msgs)
+
+catkin_package(
+    DEPENDS eigen
+    CATKIN_DEPENDS std_msgs geometry_msgs pr2_mechanism_msgs nav_msgs pr2_msgs visualization_msgs diagnostic_msgs pr2_controller_interface roscpp pr2_controllers_msgs pr2_mechanism_model realtime_tools robot_mechanism_controllers  pluginlib rosconsole tf angles control_toolbox filters diagnostic_updater message_runtime
+    INCLUDE_DIRS include
+    LIBRARIES pr2_mechanism_controllers
+)
+
+add_library( pr2_mechanism_controllers
   src/laser_scanner_traj_controller.cpp
   src/caster_controller.cpp
   src/base_kinematics.cpp
@@ -25,6 +53,4 @@ rosbuild_add_library( pr2_mechanism_controllers
   src/pr2_gripper_controller.cpp
   src/trajectory.cpp
   )
-rosbuild_link_boost(pr2_mechanism_controllers thread)
-rosbuild_remove_compile_flags(pr2_mechanism_controllers -W)
-
+target_link_libraries(pr2_mechanism_controllers ${Boost_LIBRARIES})
