Fix install and link against orocos_kdl.

--- a/pr2_head_action/CMakeLists.txt
+++ b/pr2_head_action/CMakeLists.txt
@@ -3,20 +3,34 @@ cmake_minimum_required(VERSION 2.8.3)
 project(pr2_head_action)
 
 # Load catkin and all dependencies required for this package
-find_package(catkin REQUIRED COMPONENTS geometry_msgs trajectory_msgs sensor_msgs pr2_controllers_msgs roscpp message_filters tf tf_conversions actionlib kdl_parser)
+find_package(catkin REQUIRED COMPONENTS 
+   geometry_msgs 
+   trajectory_msgs 
+   sensor_msgs 
+   pr2_controllers_msgs 
+   roscpp 
+   message_filters 
+   tf 
+   tf_conversions 
+   actionlib 
+   kdl_parser)
+
 find_package(orocos_kdl REQUIRED)
 
-find_package(Eigen REQUIRED)
-
-#add_executable(pr2_head_action src/pr2_head_action.cpp)
-
 find_package(Boost REQUIRED COMPONENTS thread)
-include_directories(${Boost_INCLUDE_DIRS} ${Eigen_INCLUDE_DIRS}
-   ${orocos_kdl_INCLUDE_DIRS})
+include_directories(${Boost_INCLUDE_DIRS}
+   ${orocos_kdl_INCLUDE_DIRS} ${catkin_INCLUDE_DIRS})
 
 catkin_package()
 
 add_executable(pr2_head_action src/pr2_point_frame.cpp)
 target_link_libraries(pr2_head_action ${Boost_LIBRARIES} 
-   ${orocos_kdl_LIBRARIES})
+   ${orocos_kdl_LIBRARIES} ${catkin_LIBRARIES})
+set_target_properties(pr2_head_action PROPERTIES LINK_FLAGS
+   -L${orocos_kdl_LIBRARY_DIRS})
 
+install(TARGETS pr2_head_action
+   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
+
+install(FILES head_action.launch
+   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
