--- a/pr2_calibration_controllers/CMakeLists.txt
+++ b/pr2_calibration_controllers/CMakeLists.txt
@@ -5,19 +5,20 @@ project(pr2_calibration_controllers)
 # Load catkin and all dependencies required for this package
 find_package(catkin REQUIRED COMPONENTS std_msgs std_srvs pr2_controller_interface roscpp pr2_mechanism_model realtime_tools robot_mechanism_controllers pr2_mechanism_controllers pluginlib rosconsole angles control_toolbox)
 
+include_directories(include ${catkin_INCLUDE_DIRS})
+
+catkin_package(
+    CATKIN_DEPENDS std_msgs std_srvs pr2_controller_interface roscpp pr2_mechanism_model realtime_tools robot_mechanism_controllers pr2_mechanism_controllers pluginlib rosconsole angles control_toolbox
+    INCLUDE_DIRS include
+    LIBRARIES ${PROJECT_NAME}
+)
+
 add_library(${PROJECT_NAME}
   src/caster_calibration_controller.cpp
   src/gripper_calibration_controller.cpp
   src/joint_calibration_controller.cpp
   src/wrist_calibration_controller.cpp
   src/fake_calibration_controller.cpp
-)
-
-
-catkin_package(
-    CATKIN_DEPENDS std_msgs std_srvs pr2_controller_interface roscpp pr2_mechanism_model realtime_tools robot_mechanism_controllers pr2_mechanism_controllers pluginlib rosconsole angles control_toolbox
-    INCLUDE_DIRS include
-    LIBRARIES ${PROJECT_NAME}
 )
 
 install(TARGETS ${PROJECT_NAME}
@@ -27,3 +28,6 @@ install(TARGETS ${PROJECT_NAME}
 
 install(DIRECTORY include/${PROJECT_NAME}/
    DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION})
+
+install(FILES controller_plugins.xml
+   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
