--- a/pr2_gripper_action/CMakeLists.txt
+++ b/pr2_gripper_action/CMakeLists.txt
@@ -6,12 +6,12 @@ project(pr2_gripper_action)
 find_package(catkin REQUIRED COMPONENTS roscpp actionlib_msgs actionlib pr2_mechanism_controllers robot_mechanism_controllers pr2_controllers_msgs pr2_mechanism_model)
 
 find_package(Boost REQUIRED COMPONENTS thread)
-include_directories(${Boost_INCLUDE_DIRS})
+include_directories(${Boost_INCLUDE_DIRS} ${catkin_INCLUDE_DIRS})
 
 catkin_package()
 
 add_executable(pr2_gripper_action src/pr2_gripper_action.cpp)
-target_link_libraries(pr2_gripper_action ${Boost_LIBRARIES})
+target_link_libraries(pr2_gripper_action ${Boost_LIBRARIES} ${catkin_LIBRARIES})
 
 install(TARGETS pr2_gripper_action
    DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
