--- a/robot_mechanism_controllers/CMakeLists.txt
+++ b/robot_mechanism_controllers/CMakeLists.txt
@@ -13,7 +13,7 @@ add_message_files(
 )
 
 find_package(Boost REQUIRED COMPONENTS signals)
-include_directories(include ${Boost_INCLUDE_DIRS})
+include_directories(include ${Boost_INCLUDE_DIRS} ${catkin_INCLUDE_DIRS})
 
 generate_messages(DEPENDENCIES geometry_msgs std_msgs)
 
@@ -34,5 +34,7 @@ add_library(robot_mechanism_controllers
     src/joint_trajectory_action_controller.cpp
     src/jt_cartesian_controller.cpp
 )
-target_link_libraries(robot_mechanism_controllers ltdl)
-target_link_libraries(robot_mechanism_controllers ${Boost_LIBRARIES})
+target_link_libraries(robot_mechanism_controllers ltdl ${Boost_LIBRARIES}
+   ${catkin_LIBRARIES})
+add_dependencies(robot_mechanism_controllers 
+   ${robot_mechanism_controllers_EXPORTED_TARGETS})
