More build/dependency fixes.

--- a/pr2_head_action/CMakeLists.txt
+++ b/pr2_head_action/CMakeLists.txt
@@ -28,6 +28,7 @@ target_link_libraries(pr2_head_action ${Boost_LIBRARIES}
    ${orocos_kdl_LIBRARIES} ${catkin_LIBRARIES})
 set_target_properties(pr2_head_action PROPERTIES LINK_FLAGS
    -L${orocos_kdl_LIBRARY_DIRS})
+add_dependencies(pr2_head_action ${catkin_EXPORTED_TARGETS})
 
 install(TARGETS pr2_head_action
    DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
