Remove unused dependencies.

--- a/pr2_calibration_controllers/CMakeLists.txt
+++ b/pr2_calibration_controllers/CMakeLists.txt
@@ -3,12 +3,28 @@ cmake_minimum_required(VERSION 2.8.3)
 project(pr2_calibration_controllers)
 
 # Load catkin and all dependencies required for this package
-find_package(catkin REQUIRED COMPONENTS std_msgs std_srvs pr2_controller_interface roscpp pr2_mechanism_model realtime_tools robot_mechanism_controllers pr2_mechanism_controllers pluginlib rosconsole angles control_toolbox)
+find_package(catkin REQUIRED COMPONENTS 
+   std_msgs 
+   pr2_controller_interface 
+   roscpp 
+   pr2_mechanism_model 
+   realtime_tools 
+   robot_mechanism_controllers 
+   pr2_mechanism_controllers 
+   pluginlib)
 
 include_directories(include ${catkin_INCLUDE_DIRS})
 
 catkin_package(
-    CATKIN_DEPENDS std_msgs std_srvs pr2_controller_interface roscpp pr2_mechanism_model realtime_tools robot_mechanism_controllers pr2_mechanism_controllers pluginlib rosconsole angles control_toolbox
+    CATKIN_DEPENDS 
+    std_msgs 
+    pr2_controller_interface 
+    roscpp
+    pr2_mechanism_model
+    realtime_tools
+    robot_mechanism_controllers
+    pr2_mechanism_controllers
+    pluginlib
     INCLUDE_DIRS include
     LIBRARIES ${PROJECT_NAME}
 )
@@ -20,6 +36,7 @@ add_library(${PROJECT_NAME}
   src/wrist_calibration_controller.cpp
   src/fake_calibration_controller.cpp
 )
+target_link_libraries(${PROJECT_NAME} ${catkin_LIBRARIES})
 add_dependencies(${PROJECT_NAME} ${catkin_EXPORTED_TARGETS})
 
 install(TARGETS ${PROJECT_NAME}
