--- a/ethercat_trigger_controllers/CMakeLists.txt
+++ b/ethercat_trigger_controllers/CMakeLists.txt
@@ -30,6 +30,8 @@ catkin_package(
     LIBRARIES ethercat_trigger_controllers
 )
 
+add_definitions(-O3)
+
 add_library(ethercat_trigger_controllers ${_srcs})
 target_link_libraries(ethercat_trigger_controllers ltdl ${catkin_LIBRARIES})
 add_dependencies(ethercat_trigger_controllers ${ethercat_trigger_controllers_EXPORTED_TARGETS})
