--- a/pr2_mechanism_controllers/CMakeLists.txt
+++ b/pr2_mechanism_controllers/CMakeLists.txt
@@ -57,6 +57,7 @@ target_link_libraries(pr2_mechanism_controllers ${Boost_LIBRARIES}
    ${catkin_LIBRARIES})
 add_dependencies(pr2_mechanism_controllers
    ${pr2_mechanism_controllers_EXPORTED_TARGETS})
+pr2_enable_rpath(pr2_mechanism_controllers)
 
 # TODO: tests
 
