--- a/single_joint_position_action/package.xml
+++ b/single_joint_position_action/package.xml
@@ -5,7 +5,7 @@
   interface for commanding a trajectory to move a joint to a particular
   position. The action reports success when the joint reaches the desired
   position.</description>
-  <maintainer email="ahendrix@willowgarage.com">Austin Hendrix</maintainer>
+  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>
 
   <license>BSD</license>
 
