--- a/ethercat_trigger_controllers/package.xml
+++ b/ethercat_trigger_controllers/package.xml
@@ -4,7 +4,7 @@
   <description>Controllers to operate the digital output of the motor controller
     boards and the projector board. This package has not been reviewed and
     should be considered unstable.</description>
-  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>
+  <maintainer email="ros-orphaned-packages@googlegroups.com">ROS Orphaned Package Maintainers</maintainer>
 
   <license>BSD</license>
 
