--- a/pr2_calibration_controllers/package.xml
+++ b/pr2_calibration_controllers/package.xml
@@ -3,7 +3,7 @@
   <version>1.10.13</version>
   <description>The pr2_calibration_controllers package contains the controllers
      used to bring all the joints in the PR2 to a calibrated state.</description>
-  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>
+  <maintainer email="ros-orphaned-packages@googlegroups.com">ROS Orphaned Package Maintainers</maintainer>
 
   <license>BSD</license>
 
