--- a/pr2_controllers/package.xml
+++ b/pr2_controllers/package.xml
@@ -2,7 +2,7 @@
   <name>pr2_controllers</name>
   <version>1.10.13</version>
   <description>Contains the controllers that run in realtime on the PR2 and supporting packages.</description>
-  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>
+  <maintainer email="ros-orphaned-packages@googlegroups.com">ROS Orphaned Package Maintainers</maintainer>
 
   <license>BSD</license>
 
