--- a/pr2_mechanism_controllers/package.xml
+++ b/pr2_mechanism_controllers/package.xml
@@ -3,7 +3,7 @@
   <version>1.10.13</version>
   <description>The pr2_mechanism_controllers package contains realtime
     controllers that are meant for specific mechanisms of the PR2.</description>
-  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>
+  <maintainer email="ros-orphaned-packages@googlegroups.com">ROS Orphaned Package Maintainers</maintainer>
 
   <license>BSD</license>
 
