--- a/robot_mechanism_controllers/package.xml
+++ b/robot_mechanism_controllers/package.xml
@@ -2,7 +2,7 @@
   <name>robot_mechanism_controllers</name>
   <version>1.10.13</version>
   <description>Generic Mechanism Controller Library</description>
-  <maintainer email="dash@clearpathrobotics.com">Devon Ash</maintainer>
+  <maintainer email="ros-orphaned-packages@googlegroups.com">ROS Orphaned Package Maintainers</maintainer>
 
   <license>BSD</license>
 
