--- a/pr2_controllers_msgs/CMakeLists.txt
+++ b/pr2_controllers_msgs/CMakeLists.txt
@@ -9,6 +9,7 @@ add_message_files(
    DIRECTORY msg
    FILES
    JointControllerState.msg
+   JointControllerStateArray.msg
    JointTrajectoryControllerState.msg
    Pr2GripperCommand.msg
 )
