use install(PROGRAMS scripts/effort.py posture.py instaed of install(FILES

--- a/robot_mechanism_controllers/CMakeLists.txt
+++ b/robot_mechanism_controllers/CMakeLists.txt
@@ -57,5 +57,5 @@ install(DIRECTORY include/${PROJECT_NAME}/
 install(FILES controller_plugins.xml
    DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
 
-install(FILES scripts/effort.py posture.py
-   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
+install(PROGRAMS scripts/effort.py posture.py
+  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
